backend: update findAll
